$Id$

2018-03-06  Alex Samorukov <samm@os2.kiev.ua>

	drivedb.h: add Transcend PSD SSD family (#979)

2018-03-05  Gabriele Pohl <contact@dipohl.de>

	drivedb.h:
	- Add Seagate IronWolf 12TB ST12000VN0007-2GS116 (#988)

2018-03-05  Alex Samorukov <samm@os2.kiev.ua>

	drivedb.h: add Seagate Barracuda Pro family (#981)

2018-03-01  Alex Samorukov <samm@os2.kiev.ua>

	os_freebsd.cpp: Fix build under -CURRENT (patch by cy@)

2018-02-28  Alex Samorukov <samm@os2.kiev.ua>

	drivedb.h:
	- Add SanDisk SDSSDH2128G (#982)

2018-02-27  Alex Samorukov <samm@os2.kiev.ua>

	drivedb.h:
	- extend PLEXTOR PX regexp (#934)
	- add Seagate Enterprise NAS HDD family (#946)
	- add SanDisk SDSA6MM-* family (#965)
	- fix Seagate Laptop HDD regexp (#955)
	- add Seagate Barracuda Compute series (#927)
	- extend Seagate Enterprise Capacity 3.5 HDD regexp (#956)

2018-02-26  Alex Samorukov <samm@os2.kiev.ua>

	drivedb.h:
	- add Seagate XF1230 SSD (GH: issues/4)
	- add Intel SSD Pro 5400s Series (GH: pull/5)
	- add SanDisk-SD8SN8U-256G-1006 (GH: pull/3)
	- add Toshiba Q300 SSD series (#932)
	- extend HGST Deskstar NAS regexp (#975)
	- add KINGSTON SNS4151S316GD SSD (#902)

2018-02-20  Christian Franke  <franke@computer.org>

	os_netbsd.cpp: Apply patch-os_netbsd.cpp 1.1 (2017-12-15) from
	pkgsrc.se/sysutils/smartmontools: Add missing <sys/stat.h>.

	configure.ac, int64.h: Remove support for pre-C99 environments without
	<inttypes.h> and <stdint.h>.

	configure.ac: Add '-Wformat=2 -fstack-protector-strong' unless
	CXXFLAGS include other '-W' or '-f' options.

2018-02-16  Christian Franke  <franke@computer.org>

	drivedb.h:
	- USB: Default to '-d sat' for Toshiba (0x0480), Seagate (0x0bc2),
	Western Digital (0x1058), Initio (0x13fd), ASMedia (0x174c).
	Keep known exceptions.  Merge some entries.

2018-02-08  Douglas Gilbert  <dgilbert@interlog.com>

	nvme on windows: just some code comments. Seems as though
	W10 tries to completely neuter the idea of a pass-through.
