@@ -2,7 +2,9 @@ $Id$
 
 2018-03-06  Alex Samorukov <samm@os2.kiev.ua>
 
-	drivedb.h: add Transcend PSD SSD family (#979)
+	drivedb.h: 
+	- add Transcend PSD SSD family (#979)
+	- add Toshiba HK4R Series SSD (#898)
 
 2018-03-05  Gabriele Pohl <contact@dipohl.de>
 
